# mlb-fair-service

./: .gitignore  .vercelignore  DESIGN.md  DEVELOPMENT.md  README.md  demo.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: mock_kalshi_events.json  mock_odds.json  mock_schedule.json
docs/: PLAN_exercise1_engineering.md  PLAN_exercise2_modeling.md
src/mlb_fair/: config.py  main.py  models.py
src/mlb_fair/emit/: sink.py
src/mlb_fair/engine/: fair_engine.py  registry.py  scheduler.py
src/mlb_fair/kalshi/: base.py  client.py  mapping.py  mock.py  team_aliases.json
src/mlb_fair/odds/: base.py  devig.py  mapping.py  mock.py  optic_odds.py  selection.py
src/mlb_fair/spine/: base.py  mock.py  statsapi.py
tests/: test_devig.py  test_emit_no_fair.py  test_kalshi_mapping.py  test_odds_mapping.py  test_optic_odds.py  test_selection_failover.py  test_spine_registry.py  test_staleness.py  test_webapp.py
webapp/: README.md  app.py
webapp/static/: index.html
