[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-fair-service"
version = "0.1.0"
description = "Live MLB fixture detection & sportsbook fair-value service for Kalshi market making"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
    "tzdata>=2024.1",  # IANA tz DB for zoneinfo (no system tz on Windows); league-local date normalization
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mlb-fair = "mlb_fair.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_fair"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
